--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,9 +1,17 @@
 <h2>{{ ideas.type }}</h2>
 
-<button (click)="description = !description">
+<button
+  class="activeToggleButton"
+  [ngClass]="{
+    toggleButton: description
+  }"
+  (click)="description = !description"
+>
   {{ description ? "Hide" : "Show" }} Description
 </button>
 
 <div *ngIf="description">
-  <p>{{ ideas.activity }}</p>
+  <p style="color: green; background-color: orange">
+    {{ ideas.activity }}
+  </p>
 </div>
