added async requests and catch errors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
+<app-global-error></app-global-error>
+
 <h1 class="header">{{ title | uppercase }}</h1>
 
+<p *ngIf="loading">Loading...</p>
+
 <app-header
-  *ngFor="let ideas of ideas; let i = index"
+  *ngFor="let ideas of ideas$ | async; let i = index"
   [ideas]="ideas"
 ></app-header>
