create new requests, added calc for inputs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header [latestRate]="latestRate"></app-header>
 <app-converter title="Currency converter">
-  <app-field></app-field>
+  <app-form></app-form>
 </app-converter>
