--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,54 @@
-<app-header [latestRate]="latestRate"></app-header>
 <app-converter title="Currency converter">
   <app-form></app-form>
 </app-converter>
+<div class="header">
+  <app-header [latestRate]="latestRate"></app-header>
+
+  <div class="inner-header flex"></div>
+
+  <div>
+    <svg
+      class="waves"
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      viewBox="0 24 150 28"
+      preserveAspectRatio="none"
+      shape-rendering="auto"
+    >
+      <defs>
+        <path
+          id="gentle-wave"
+          d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+        />
+      </defs>
+      <g class="parallax">
+        <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="0"
+          fill="rgba(255,255,255,0.7"
+        />
+        <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="3"
+          fill="rgba(255,255,255,0.5)"
+        />
+        <use
+          xlink:href="#gentle-wave"
+          x="48"
+          y="5"
+          fill="rgba(255,255,255,0.3)"
+        />
+        <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+      </g>
+    </svg>
+  </div>
+</div>
+<app-converter title="Transforming Money with a Single Touch">
+  <app-form></app-form>
+</app-converter>
+
+<div class="content flex">
+  <p>By. Roman Tunkiv for ITOP1000 Company</p>
+</div>
