--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,29 +1,48 @@
 <form>
-  <input
-    name="from"
-    type="number"
-    placeholder="From"
-    [value]="fromInputValue"
-    [(ngModel)]="fromInputValue"
-    (input)="calcToInputValue()"
-  />
-  <select #c1 name="from" (change)="setfromCurrency(c1.value)">
-    <option value="USD" selected>USD</option>
-    <option value="EUR">EUR</option>
-    <option value="UAH">UAH</option>
-  </select>
+  <label class="formLabel">
+    <input
+      class="formInput"
+      name="from"
+      type="number"
+      placeholder="From"
+      [value]="fromInputValue"
+      [(ngModel)]="fromInputValue"
+      (input)="calcToInputValue()"
+    />
+    <select
+      class="formSelect"
+      #c1
+      name="from"
+      (change)="setfromCurrency(c1.value)"
+    >
+      <option value="USD" selected>USD</option>
+      <option value="EUR">EUR</option>
+      <option value="UAH">UAH</option>
+    </select>
+  </label>
 
-  <input
-    name="to"
-    type="number"
-    placeholder="To"
-    [value]="toInputValue"
-    [(ngModel)]="toInputValue"
-    (input)="calcFromInputValue()"
-  />
-  <select #c2 name="to" (change)="setToCurrency(c2.value)">
-    <option value="UAH" selected>UAH</option>
-    <option value="USD">USD</option>
-    <option value="EUR">EUR</option>
-  </select>
+  <div class="transferWrapper">
+    <img
+      class="transfer"
+      src="../../../assets/images/arrows.png"
+      alt="transfer"
+    />
+  </div>
+
+  <label class="formLabel">
+    <input
+      class="formInput"
+      name="to"
+      type="number"
+      placeholder="To"
+      [value]="toInputValue"
+      [(ngModel)]="toInputValue"
+      (input)="calcFromInputValue()"
+    />
+    <select class="formSelect" #c2 name="to" (change)="setToCurrency(c2.value)">
+      <option value="UAH" selected>UAH</option>
+      <option value="USD">USD</option>
+      <option value="EUR">EUR</option>
+    </select>
+  </label>
 </form>
