--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,7 @@
 <header class="header">
+  <a href="/" class="logo">
+    <img width="50px" src="../../../assets/images/logo.png" alt="coin" />
+  </a>
   <ul class="rate_list">
     <li>EUR: {{ latestRate.EUR }}</li>
     <li>USD: {{ latestRate.USD }}</li>
