--- a/src/app/components/converter/converter.component.scss
+++ b/src/app/components/converter/converter.component.scss
@@ -2,10 +2,29 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 600px;
-  height: 400px;
+  z-index: 9999;
 
-  background-color: rgba(0, 0, 0, 0.2);
+  width: 90%;
+  padding: 20px;
 
-  transform: translate(-50%, -50%);
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.8);
+  border-radius: 10px;
+  transform: translate(-50%, -52%);
+
+  @media screen and (min-width: 768px) {
+    width: 650px;
+  }
+}
+
+.title {
+  margin-bottom: 30px;
+  text-align: center;
+  font-size: 28px;
+  color: #000;
+
+  @media screen and (max-width: 400px) {
+    font-size: 24px;
+  }
 }
