--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,14 +1,22 @@
 .header {
+  position: fixed;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  width: 100%;
   height: 80px;
   padding: 10px;
-  background-color: red;
+
+  background-color: #2196f3;
+  -webkit-box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.8);
 }
 
 .rate_list {
-  display: flex;
-  align-items: center;
-  gap: 50px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+  }
+
 }
