changed image path

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -22,11 +22,7 @@
   </label>
 
   <div class="transferWrapper">
-    <img
-      class="transfer"
-      src="../../../assets/images/arrows.png"
-      alt="transfer"
-    />
+    <img class="transfer" src="/assets/images/arrows.png" alt="transfer" />
   </div>
 
   <label class="formLabel">
