--- a/src/app/components/converter/converter.component.scss
+++ b/src/app/components/converter/converter.component.scss
@@ -8,9 +8,9 @@
   padding: 20px;
 
   background-color: #fff;
-  -webkit-box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.8);
-  box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.8);
   border-radius: 10px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, .12), 0px 4px 4px rgba(0, 0, 0, .06), 1px 4px 6px rgba(0, 0, 0, .16);
+
   transform: translate(-50%, -52%);
 
   @media screen and (min-width: 768px) {
