--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -8,7 +8,7 @@
       [value]="fromInputValue"
       [(ngModel)]="fromInputValue"
       (input)="calcToInputValue()"
-      (focus)="setCurrentField($event.target.value)"
+      (focus)="setCurrentField('from')"
     />
     <select
       class="formSelect"
@@ -35,7 +35,7 @@
       [value]="toInputValue"
       [(ngModel)]="toInputValue"
       (input)="calcFromInputValue()"
-      (focus)="setCurrentField()"
+      (focus)="setCurrentField('to')"
     />
     <select class="formSelect" #c2 name="to" (change)="setToCurrency(c2.value)">
       <option value="UAH" selected>UAH</option>
